--- a/pages/todo/index.wxml
+++ b/pages/todo/index.wxml
@@ -100,27 +100,6 @@
                 </view>
               </view>
               
-              <!-- 文字打卡历史记录容器 -->
-              <view class="text-history-container" wx:if="{{expandedDay === 1 && index === 0 && textInputHistory.length > 0}}">
-                <view class="history-title">文字打卡历史</view>
-                <view class="history-list">
-                  <view 
-                    wx:for="{{textInputHistory}}" 
-                    wx:for-item="historyItem" 
-                    wx:key="timestamp"
-                    class="history-item"
-                  >
-                    <view class="history-header">
-                      <text class="history-index">记录 #{{historyItem.index}}</text>
-                      <text class="history-time">{{historyItem.time}}</text>
-                    </view>
-                    <view class="history-content">
-                      <text class="history-text">{{historyItem.content}}</text>
-                    </view>
-                  </view>
-                </view>
-              </view>
-              
               <!-- 图片打卡内容显示容器 -->
               <view class="image-checkin-container" wx:if="{{expandedDay === 1 && index === 0 && latestImageInput.imgSrc}}">
                 <view class="latest-checkin">
@@ -137,34 +116,6 @@
                         data-img-src="{{latestImageInput.imgSrc}}"
                       ></image>
                       <view class="image-hint">点击图片可放大查看</view>
-                    </view>
-                  </view>
-                </view>
-              </view>
-              
-              <!-- 图片打卡历史记录容器 -->
-              <view class="image-history-container" wx:if="{{expandedDay === 1 && index === 0 && imageInputHistory.length > 0}}">
-                <view class="history-title">图片打卡历史</view>
-                <view class="image-history-list">
-                  <view 
-                    wx:for="{{imageInputHistory}}" 
-                    wx:for-item="imageItem" 
-                    wx:key="timestamp"
-                    class="image-history-item"
-                  >
-                    <view class="history-header">
-                      <text class="history-index">照片 #{{imageItem.index}}</text>
-                      <text class="history-time">{{imageItem.time}}</text>
-                    </view>
-                    <view class="image-history-content">
-                      <image 
-                        class="history-image" 
-                        src="{{imageItem.imgSrc}}" 
-                        mode="aspectFill" 
-                        bindtap="previewImage" 
-                        data-img-src="{{imageItem.imgSrc}}"
-                      ></image>
-                      <view class="image-hint">点击查看大图</view>
                     </view>
                   </view>
                 </view>
@@ -192,76 +143,75 @@
                 </view>
               </view>
               
-              <!-- 语音打卡历史记录容器 -->
-              <view class="audio-history-container" wx:if="{{expandedDay === 1 && index === 0 && audioInputHistory.length > 0}}">
-                <view class="history-title">语音打卡历史</view>
-                <view class="audio-history-list">
-                  <view 
-                    wx:for="{{audioInputHistory}}" 
-                    wx:for-item="audioItem" 
-                    wx:key="timestamp"
-                    class="audio-history-item"
-                  >
-                    <view class="history-header">
-                      <text class="history-index">语音 #{{audioItem.index}}</text>
-                      <text class="history-time">{{audioItem.time}}</text>
-                    </view>
-                    <view class="audio-history-content">
-                      <view 
-                        class="audio-player-history {{currentPlayingAudio === audioItem.audioSrc ? 'playing' : ''}}" 
-                        bindtap="playAudio" 
-                        data-audio-src="{{audioItem.audioSrc}}"
-                      >
-                        <view class="audio-icon">🔊</view>
-                        <view class="audio-duration">{{audioItem.duration}}</view>
-                        <view class="audio-status">{{currentPlayingAudio === audioItem.audioSrc ? '播放中...' : '点击播放'}}</view>
+              <!-- 统一的打卡历史记录容器 -->
+              <view class="unified-history-container" wx:if="{{expandedDay === 1 && index === 0 && (textInputHistory.length > 0 || imageInputHistory.length > 0 || audioInputHistory.length > 0)}}">
+                <view class="history-title">打卡历史记录</view>
+                
+                <!-- 所有历史记录混合显示 -->
+                <view class="unified-history-list">
+                  <!-- 文字记录 -->
+                  <block wx:for="{{textInputHistory}}" wx:for-item="textItem" wx:key="timestamp">
+                    <view class="unified-history-item text-type">
+                      <view class="history-header">
+                        <view class="history-info">
+                          <text class="history-type">文字</text>
+                          <text class="history-index">#{{textItem.index}}</text>
+                        </view>
+                        <text class="history-time">{{textItem.time}}</text>
+                      </view>
+                      <view class="history-content">
+                        <text class="history-text">{{textItem.content}}</text>
                       </view>
                     </view>
-                  </view>
+                  </block>
+                  
+                  <!-- 图片记录 -->
+                  <block wx:for="{{imageInputHistory}}" wx:for-item="imageItem" wx:key="timestamp">
+                    <view class="unified-history-item image-type">
+                      <view class="history-header">
+                        <view class="history-info">
+                          <text class="history-type">图片</text>
+                          <text class="history-index">#{{imageItem.index}}</text>
+                        </view>
+                        <text class="history-time">{{imageItem.time}}</text>
+                      </view>
+                      <view class="history-content">
+                        <image 
+                          class="history-image" 
+                          src="{{imageItem.imgSrc}}" 
+                          mode="aspectFill" 
+                          bindtap="previewImage" 
+                          data-img-src="{{imageItem.imgSrc}}"
+                        ></image>
+                        <view class="image-hint">点击查看大图</view>
+                      </view>
+                    </view>
+                  </block>
+                  
+                  <!-- 语音记录 -->
+                  <block wx:for="{{audioInputHistory}}" wx:for-item="audioItem" wx:key="timestamp">
+                    <view class="unified-history-item audio-type">
+                      <view class="history-header">
+                        <view class="history-info">
+                          <text class="history-type">语音</text>
+                          <text class="history-index">#{{audioItem.index}}</text>
+                        </view>
+                        <text class="history-time">{{audioItem.time}}</text>
+                      </view>
+                      <view class="history-content">
+                        <view 
+                          class="audio-player-history {{currentPlayingAudio === audioItem.audioSrc ? 'playing' : ''}}" 
+                          bindtap="playAudio" 
+                          data-audio-src="{{audioItem.audioSrc}}"
+                        >
+                          <view class="audio-icon">🔊</view>
+                          <view class="audio-duration">{{audioItem.duration}}</view>
+                          <view class="audio-status">{{currentPlayingAudio === audioItem.audioSrc ? '播放中...' : '点击播放'}}</view>
+                        </view>
+                      </view>
+                    </view>
+                  </block>
                 </view>
-              </view>
-              
-              <!-- 历史打卡记录显示 -->
-              <view class="checkin-records-container" wx:if="{{expandedDay === 1 && index === 0 && getTaskCheckinRecords(expandedDay, item.title).length > 0}}">
-                <view class="records-title">历史打卡记录</view>
-                <!-- 文字打卡记录 -->
-                <block>
-                  <view wx:for="{{getTaskCheckinRecords(expandedDay, item.title)}}" 
-                        wx:for-item="record" 
-                        wx:key="timestamp"
-                        class="checkin-record {{record.method}}-record"
-                        wx:if="{{record.method === 'text'}}">
-                    <view class="checkin-header">
-                      <text class="checkin-type">文字打卡</text>
-                      <text class="checkin-time">{{record.timeFormatted}}</text>
-                    </view>
-                    <view class="checkin-body">
-                      <text class="checkin-text">{{record.content}}</text>
-                    </view>
-                  </view>
-                </block>
-                
-                <!-- 图片打卡记录 -->
-                <block>
-                  <view wx:for="{{getTaskCheckinRecords(expandedDay, item.title)}}" 
-                        wx:for-item="record" 
-                        wx:key="timestamp"
-                        class="checkin-record {{record.method}}-record"
-                        wx:if="{{record.method === 'image'}}">
-                    <view class="checkin-header">
-                      <text class="checkin-type">图片打卡</text>
-                      <text class="checkin-time">{{record.timeFormatted}}</text>
-                    </view>
-                    <view class="checkin-body">
-                      <image class="checkin-image" 
-                             src="{{record.content}}" 
-                             mode="aspectFill" 
-                             bindtap="previewImage" 
-                             data-img-src="{{record.content}}"></image>
-                      <view class="image-hint">点击图片可放大查看</view>
-                    </view>
-                  </view>
-                </block>
               </view>
               
               <!-- 打卡按钮区域 - 三个圆角矩形按钮 -->
